fix env file
